Add 1.16 Mobs + Iron Golem
Added Iron Golem Spawn Egg
  -Crafting
    -Surround egg with iron
Added Hoglin Crafting
    -porkchop in corners
    -egg incenter
    -crimson fungi everywhere else
Added Piglin Crafting
     -Surround egg with gold
Added Strider Crafting
     -Surround egg with lava buckets
Modified Pligmen Crafting
    -gold ingot in corners
    -egg incenter
    -rotten flesh everywhere else

--- a/src/main/resources/assets/craftingspawn/lang/en_us.json
+++ b/src/main/resources/assets/craftingspawn/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "enchantment.craftingspawn.silkspawner": "Spawner Harvest"
+    "enchantment.craftingspawn.silkspawner": "Spawner Harvest",
+    "item.craftingspawn.golem_egg": "Iron golem Spawn Egg"
 }
